changed overflow bug/unintended behavior

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -10,6 +10,8 @@ body {
     font-family: Arial, sans-serif;
     background: linear-gradient(135deg, black, #737373);
     min-height: 100vh;
+    max-height: 100vh;
+    overflow: scroll;
 }
 
 .no-link-style {
